[gd_scene load_steps=10 format=3 uid="uid://benbj478yvd1k"]

[ext_resource type="Script" uid="uid://bs5n2pr3milnl" path="res://Scripts/main_menu_script.gd" id="1_dvugo"]
[ext_resource type="Texture2D" uid="uid://dumpdiil1vd26" path="res://Assets/Background.png" id="1_mcehi"]
[ext_resource type="PackedScene" uid="uid://c0ycv5tnl0734" path="res://Scenes/options.tscn" id="3_6mq3p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4503l"]
texture = ExtResource("1_mcehi")
modulate_color = Color(0.589096, 0.589096, 0.589096, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nfso"]
bg_color = Color(0.427451, 0.427451, 0.427451, 0.572549)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrees"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0pcb"]
bg_color = Color(0.77084, 0.770839, 0.770839, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcd2c"]
bg_color = Color(0.572988, 0.572988, 0.572988, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5l0a"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("OPTIONSMENU")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvugo")
OPTIONSMENU = NodePath("Options")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4503l")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 204.5
offset_top = 96.0
offset_right = 947.5
offset_bottom = 179.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_7nfso")
text = "The H.I.G.H.L.I.G.H.T. Reel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -74.0
offset_right = 207.5
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qrees")
theme_override_styles/hover = SubResource("StyleBoxFlat_e0pcb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcd2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x5l0a")
text = "Play"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qrees")
theme_override_styles/hover = SubResource("StyleBoxFlat_e0pcb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcd2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x5l0a")
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qrees")
theme_override_styles/hover = SubResource("StyleBoxFlat_e0pcb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcd2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x5l0a")
text = "Exit"

[node name="Options" parent="." instance=ExtResource("3_6mq3p")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
